<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.artofarc.eai</groupId>
	<artifactId>WSGenerate</artifactId>
	<packaging>jar</packaging>
	<version>1.3-SNAPSHOT</version>
	<name>WSGenerate</name>
	<url>http://maven.apache.org</url>
	<properties>
		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
		<maven.build.timestamp.format>yyyy-MM-dd HH:mmz</maven.build.timestamp.format>
	</properties>
	<dependencies>
		<dependency>
			<groupId>wsdl4j</groupId>
			<artifactId>wsdl4j</artifactId>
			<version>1.6.3</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.mwe.core</artifactId>
			<version>1.3.13</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>org.eclipse.emf.common</artifactId>
			<version>2.12.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xpand</groupId>
			<artifactId>org.eclipse.xpand</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.xpand</groupId>
			<artifactId>org.eclipse.xtend</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.antlr</groupId>
			<artifactId>antlr-runtime</artifactId>
			<version>3.5.2</version>
		</dependency>
		<dependency>
			<groupId>com.ibm.icu</groupId>
			<artifactId>icu4j</artifactId>
			<version>4.6.1.1</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.emf</groupId>
			<artifactId>ecore</artifactId>
			<version>2.3.0-v200706262000</version>
			<scope>test</scope>
		</dependency>
		<!-- For JDK 11 -->
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>2.3.3</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.github.florianingerl.util/regex -->
		<dependency>
			<groupId>com.github.florianingerl.util</groupId>
			<artifactId>regex</artifactId>
			<version>1.1.9</version>
		</dependency>
	</dependencies>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.10.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<encoding>${project.build.sourceEncoding}</encoding>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jaxb2-maven-plugin</artifactId>
				<version>2.5.0</version>
				<executions>
					<execution>
						<id>xjc</id>
						<goals>
							<goal>xjc</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<locale>en</locale>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-shade-plugin</artifactId>
				<version>3.2.4</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>shade</goal>
						</goals>
						<configuration>
							<transformers>
								<transformer
									implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
									<mainClass>com.artofarc.WSGenerate</mainClass>
								</transformer>
							</transformers>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<minimizeJar>true</minimizeJar>
					<filters>
						<filter>
							<artifact>*:*</artifact>
							<excludes>
								<exclude>META-INF/*.SF</exclude>
								<exclude>META-INF/*.DSA</exclude>
								<exclude>META-INF/*.RSA</exclude>
							</excludes>
						</filter>
	                    <filter>
	                       <artifact>commons-logging:commons-logging</artifact>
	                       <includes>
	                           <include>**</include>
	                       </includes>
	                    </filter>                      
	                    <filter>
	                       <artifact>wsdl4j:wsdl4j</artifact>
	                       <includes>
	                           <include>**</include>
	                       </includes>
	                    </filter>                      
	                    <filter>
	                       <artifact>org.glassfish.jaxb:jaxb-runtime</artifact>
	                       <includes>
	                           <include>**</include>
	                       </includes>
	                    </filter>                      
	                    <filter>
	                       <artifact>com.ibm.icu:icu4j</artifact>
	                       <includes>
	                           <include>com/ibm/icu/text/*</include>
	                           <include>com/ibm/icu/util/*</include>
	                           <include>com/ibm/icu/impl/locale/*</include>
	                           <include>com/ibm/icu/impl/*</include>
	                           <include>com/ibm/icu/impl/data/icudt46b/*</include>
	                           <include>com/ibm/icu/lang/*</include>
	                           <include>com/ibm/icu/impl/data/icudt46b/curr/*</include>
	                           <include>com/ibm/icu/math/*</include>
	                       </includes>
	                    </filter>                      
					</filters>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<phase>install</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<includeScope>runtime</includeScope>
							<outputDirectory>${project.build.directory}/lib</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.0.2</version>
				<configuration>
					<archive>
						<manifest>
			                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
							<addClasspath>true</addClasspath>
							<useUniqueVersions>false</useUniqueVersions>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>com.artofarc.WSGenerate</mainClass>
						</manifest>
			            <manifestEntries>
			                <Build-Time>${maven.build.timestamp}</Build-Time>
			            </manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
		<resources>
			<resource>
				<directory>src/main/xsd</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
	</build>
</project>
